[tool.poetry]
name = "cf"
version = "0.1.0"
description = ""
authors = ["Arbaaz Shafiq <arbaazshafiq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
cf = "cf.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
